<resources>
    <string name="app_name">Style Transfer with Arm NN</string>


    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="help_message">Press the button or touch the screen</string>
    <string name="old_phone_message">This smartphone is too old and cannot use NNAPI</string>

    <string name="take_pic_button">Take a picture</string>
    <string name="save_pic_button">Save picture</string>
    <string name="pick_a_style">Please choose your image style:</string>
    <string name="main_des_glaneuses_button_text">Des Glaneuses</string>
    <string name="main_la_muse_button_text">La Muse</string>
    <string name="main_mirror_button_text">Mirror</string>
    <string name="main_udnie_button_text">Udnie</string>
    <string name="main_wave_crop_button_text">Wave Crop</string>
    <string name="image_classi_service_not_running">Styler service is not running, go back a reselect a style</string>
    <string name="armnn_footnote">Powered by ArmNN</string>
    <string name="picture_saved">Picture has been saved</string>
    <string name="enablennapi">Arm NN</string>


</resources>
