<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arm.styletransfer.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_a_style"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_des_glaneuses_button"
            android:text="@string/main_des_glaneuses_button_text"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/main_title"
            android:src="@drawable/image_des_glaneuses"/>

        <ImageButton
            android:id="@+id/main_la_muse_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_la_muse_button_text"
            android:layout_below="@+id/main_des_glaneuses_button"
            android:layout_centerHorizontal="true"
            android:src="@drawable/image_la_muse"/>

        <ImageButton
            android:id="@+id/main_mirror_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_mirror_button_text"
            android:layout_below="@+id/main_la_muse_button"
            android:layout_centerHorizontal="true"
            android:src="@drawable/image_mirror" />

        <ImageButton
            android:id="@+id/main_udnie_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_udnie_button_text"
            android:layout_below="@+id/main_mirror_button"
            android:layout_centerHorizontal="true"
            android:src="@drawable/image_udnie"/>

        <ImageButton
            android:id="@+id/main_wave_crop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_wave_crop_button_text"
            android:layout_below="@+id/main_udnie_button"
            android:layout_centerHorizontal="true"
            android:src="@drawable/image_wave_crop"/>

    </RelativeLayout>
</ScrollView>